# playwright_pytest_terraform_gcp

./: .dockerignore  .gitignore  README.md  conftest.py  makefile  pyproject.toml  pytest.ini  readme.md
.github/workflows/: 00_infra.yml  01_ci.yml  02_cd.yml  02_deploy.yml  ci.yml  deploy-cloudrun.yml  deploy.yml
base/: config.py  mongo_database.py  playwright_driver.py
config/: prod.ini  test.ini  uat.ini
deployment/: Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml
deployment/.github/: deploy.yml
deployment/.github/workflows/: deploy.yml
deployment/terraform/: enable.tf  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  tfplan  variable.tf  variables.tf
flask/: trigger_automation.py
flask_app/: trigger_automation.py
infra/: api_request.py  config.py  mongo_database.py  mysql.py  playwright_driver.py
page/home_page/: home_page.py  locator.py  page.py
page/login_page/: locator.py  page.py
page/signup_page/: locator.py  page.py
test_suite/: test_register_user.py
test_suite/user_team/: test_register_user.py
test_suite/z_repo_unit/: test_mongo.py
utils/: logger.py
