[project]
name = "automation-ui-playwright-pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "taurus5650",email = "taurus_5650@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.54.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
