[project]
name = "automation-ui-playwright-pytest"
version = "0.1.0"
description = ""
authors = [
    {name = "taurus5650",email = "taurus_5650@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [{ include = "flask_app" }]
dependencies = [
    "playwright (>=1.54.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "certifi (>=2025.7.14,<2026.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
